fix clipping bug on splashphoto

--- a/styles.css
+++ b/styles.css
@@ -452,7 +452,6 @@ h3 {
   opacity: 0;
   position: relative;
   width: 90%;
-  border-radius: 25px;
   animation: fadeInFromBelow 1s ease-in-out 1.5s forwards;
   -webkit-animation: fadeInFromBelow 1s ease-in-out 1.5s forwards; /* Safari and Chrome */
   -moz-animation: fadeInFromBelow 1s ease-in-out 1.5s forwards; /* Firefox */
